--- a/pif/ui/preview.glade
+++ b/pif/ui/preview.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Sun Mar 29 19:57:09 2009 -->
+<!--Generated with glade3 3.4.5 on Mon Mar 30 00:29:30 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="window">
     <property name="width_request">620</property>
@@ -10,138 +10,152 @@
       <widget class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
         <child>
-          <widget class="GtkFrame" id="frame3">
+          <widget class="GtkVPaned" id="vpaned1">
             <property name="visible">True</property>
-            <property name="label_xalign">0</property>
-            <property name="shadow_type">GTK_SHADOW_NONE</property>
+            <property name="can_focus">True</property>
             <child>
-              <widget class="GtkAlignment" id="alignment3">
+              <widget class="GtkFrame" id="frame3">
                 <property name="visible">True</property>
-                <property name="left_padding">12</property>
+                <property name="label_xalign">0</property>
+                <property name="shadow_type">GTK_SHADOW_NONE</property>
                 <child>
-                  <widget class="GtkScrolledWindow" id="scrolledwindow1">
+                  <widget class="GtkAlignment" id="alignment3">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
-                    <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                    <property name="left_padding">12</property>
                     <child>
-                      <widget class="GtkIconView" id="view_new">
+                      <widget class="GtkScrolledWindow" id="scrolledwindow1">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="selection_mode">GTK_SELECTION_MULTIPLE</property>
-                        <signal name="drag_data_get" handler="on_view_drag_data_get"/>
-                        <signal name="item_activated" handler="on_item_activated"/>
-                        <signal name="drag_data_delete" handler="on_view_drag_data_delete"/>
-                        <signal name="drag_data_received" handler="on_view_drag_data_received"/>
+                        <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
+                        <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                        <child>
+                          <widget class="GtkIconView" id="view_new">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="selection_mode">GTK_SELECTION_MULTIPLE</property>
+                            <signal name="drag_data_get" handler="on_view_drag_data_get"/>
+                            <signal name="item_activated" handler="on_item_activated"/>
+                            <signal name="drag_data_delete" handler="on_view_drag_data_delete"/>
+                            <signal name="drag_data_received" handler="on_view_drag_data_received"/>
+                          </widget>
+                        </child>
                       </widget>
                     </child>
                   </widget>
                 </child>
-              </widget>
-            </child>
-            <child>
-              <widget class="GtkLabel" id="label3">
-                <property name="visible">True</property>
-                <property name="label" translatable="yes">&lt;b&gt;New&lt;/b&gt;</property>
-                <property name="use_markup">True</property>
+                <child>
+                  <widget class="GtkLabel" id="label3">
+                    <property name="visible">True</property>
+                    <property name="label" translatable="yes">&lt;b&gt;New&lt;/b&gt;</property>
+                    <property name="use_markup">True</property>
+                  </widget>
+                  <packing>
+                    <property name="type">label_item</property>
+                  </packing>
+                </child>
               </widget>
               <packing>
-                <property name="type">label_item</property>
+                <property name="resize">True</property>
+                <property name="shrink">True</property>
               </packing>
             </child>
-          </widget>
-        </child>
-        <child>
-          <widget class="GtkHBox" id="hbox1">
-            <property name="visible">True</property>
-            <property name="homogeneous">True</property>
             <child>
-              <widget class="GtkFrame" id="frame1">
+              <widget class="GtkHBox" id="hbox1">
                 <property name="visible">True</property>
-                <property name="label_xalign">0</property>
-                <property name="shadow_type">GTK_SHADOW_NONE</property>
+                <property name="homogeneous">True</property>
                 <child>
-                  <widget class="GtkAlignment" id="alignment1">
+                  <widget class="GtkFrame" id="frame1">
                     <property name="visible">True</property>
-                    <property name="left_padding">12</property>
+                    <property name="label_xalign">0</property>
+                    <property name="shadow_type">GTK_SHADOW_NONE</property>
                     <child>
-                      <widget class="GtkScrolledWindow" id="scrolledwindow3">
+                      <widget class="GtkAlignment" id="alignment1">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
-                        <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                        <property name="left_padding">12</property>
                         <child>
-                          <widget class="GtkIconView" id="view_upload">
+                          <widget class="GtkScrolledWindow" id="scrolledwindow3">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="tooltip_text">Ignored Images</property>
-                            <property name="selection_mode">GTK_SELECTION_MULTIPLE</property>
-                            <signal name="drag_data_get" handler="on_view_drag_data_get"/>
-                            <signal name="item_activated" handler="on_item_activated"/>
-                            <signal name="drag_data_delete" handler="on_view_drag_data_delete"/>
-                            <signal name="drag_data_received" handler="on_view_drag_data_received"/>
+                            <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
+                            <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                            <child>
+                              <widget class="GtkIconView" id="view_upload">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="tooltip_text">Ignored Images</property>
+                                <property name="selection_mode">GTK_SELECTION_MULTIPLE</property>
+                                <signal name="drag_data_get" handler="on_view_drag_data_get"/>
+                                <signal name="item_activated" handler="on_item_activated"/>
+                                <signal name="drag_data_delete" handler="on_view_drag_data_delete"/>
+                                <signal name="drag_data_received" handler="on_view_drag_data_received"/>
+                              </widget>
+                            </child>
                           </widget>
                         </child>
                       </widget>
                     </child>
-                  </widget>
-                </child>
-                <child>
-                  <widget class="GtkLabel" id="label1">
-                    <property name="visible">True</property>
-                    <property name="label" translatable="yes">&lt;b&gt;Upload&lt;/b&gt;</property>
-                    <property name="use_markup">True</property>
-                  </widget>
-                  <packing>
-                    <property name="type">label_item</property>
-                  </packing>
-                </child>
-              </widget>
-            </child>
-            <child>
-              <widget class="GtkFrame" id="frame2">
-                <property name="visible">True</property>
-                <property name="label_xalign">0</property>
-                <property name="shadow_type">GTK_SHADOW_NONE</property>
-                <child>
-                  <widget class="GtkAlignment" id="alignment2">
-                    <property name="visible">True</property>
-                    <property name="left_padding">12</property>
                     <child>
-                      <widget class="GtkScrolledWindow" id="scrolledwindow2">
+                      <widget class="GtkLabel" id="label1">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
-                        <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-                        <child>
-                          <widget class="GtkIconView" id="view_skip">
-                            <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="tooltip_text">Ignored Images</property>
-                            <property name="selection_mode">GTK_SELECTION_MULTIPLE</property>
-                            <signal name="drag_data_get" handler="on_view_drag_data_get"/>
-                            <signal name="item_activated" handler="on_item_activated"/>
-                            <signal name="drag_data_delete" handler="on_view_drag_data_delete"/>
-                            <signal name="drag_data_received" handler="on_view_drag_data_received"/>
-                          </widget>
-                        </child>
+                        <property name="label" translatable="yes">&lt;b&gt;Upload&lt;/b&gt;</property>
+                        <property name="use_markup">True</property>
                       </widget>
+                      <packing>
+                        <property name="type">label_item</property>
+                      </packing>
                     </child>
                   </widget>
                 </child>
                 <child>
-                  <widget class="GtkLabel" id="label2">
+                  <widget class="GtkFrame" id="frame2">
                     <property name="visible">True</property>
-                    <property name="label" translatable="yes">&lt;b&gt;Skip&lt;/b&gt;</property>
-                    <property name="use_markup">True</property>
+                    <property name="label_xalign">0</property>
+                    <property name="shadow_type">GTK_SHADOW_NONE</property>
+                    <child>
+                      <widget class="GtkAlignment" id="alignment2">
+                        <property name="visible">True</property>
+                        <property name="left_padding">12</property>
+                        <child>
+                          <widget class="GtkScrolledWindow" id="scrolledwindow2">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
+                            <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                            <child>
+                              <widget class="GtkIconView" id="view_skip">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="tooltip_text">Ignored Images</property>
+                                <property name="selection_mode">GTK_SELECTION_MULTIPLE</property>
+                                <signal name="drag_data_get" handler="on_view_drag_data_get"/>
+                                <signal name="item_activated" handler="on_item_activated"/>
+                                <signal name="drag_data_delete" handler="on_view_drag_data_delete"/>
+                                <signal name="drag_data_received" handler="on_view_drag_data_received"/>
+                              </widget>
+                            </child>
+                          </widget>
+                        </child>
+                      </widget>
+                    </child>
+                    <child>
+                      <widget class="GtkLabel" id="label2">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">&lt;b&gt;Skip&lt;/b&gt;</property>
+                        <property name="use_markup">True</property>
+                      </widget>
+                      <packing>
+                        <property name="type">label_item</property>
+                      </packing>
+                    </child>
                   </widget>
                   <packing>
-                    <property name="type">label_item</property>
+                    <property name="position">1</property>
                   </packing>
                 </child>
               </widget>
               <packing>
-                <property name="position">1</property>
+                <property name="resize">False</property>
+                <property name="shrink">True</property>
               </packing>
             </child>
           </widget>
@@ -204,7 +218,7 @@
           </widget>
           <packing>
             <property name="expand">False</property>
-            <property name="position">2</property>
+            <property name="position">1</property>
           </packing>
         </child>
       </widget>
