--- a/pif/ui/preview.glade
+++ b/pif/ui/preview.glade
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Mon Mar 30 00:29:30 2009 -->
+<!--Generated with glade3 3.4.5 on Mon Mar 30 01:09:27 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="window">
     <property name="width_request">620</property>
     <property name="height_request">525</property>
+    <property name="border_width">12</property>
     <signal name="destroy" handler="on_close"/>
     <child>
       <widget class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
+        <property name="spacing">6</property>
         <child>
           <widget class="GtkVPaned" id="vpaned1">
             <property name="visible">True</property>
@@ -17,7 +19,6 @@
               <widget class="GtkFrame" id="frame3">
                 <property name="visible">True</property>
                 <property name="label_xalign">0</property>
-                <property name="shadow_type">GTK_SHADOW_NONE</property>
                 <child>
                   <widget class="GtkAlignment" id="alignment3">
                     <property name="visible">True</property>
@@ -56,18 +57,18 @@
               </widget>
               <packing>
                 <property name="resize">True</property>
-                <property name="shrink">True</property>
+                <property name="shrink">False</property>
               </packing>
             </child>
             <child>
               <widget class="GtkHBox" id="hbox1">
                 <property name="visible">True</property>
+                <property name="spacing">6</property>
                 <property name="homogeneous">True</property>
                 <child>
                   <widget class="GtkFrame" id="frame1">
                     <property name="visible">True</property>
                     <property name="label_xalign">0</property>
-                    <property name="shadow_type">GTK_SHADOW_NONE</property>
                     <child>
                       <widget class="GtkAlignment" id="alignment1">
                         <property name="visible">True</property>
@@ -110,7 +111,6 @@
                   <widget class="GtkFrame" id="frame2">
                     <property name="visible">True</property>
                     <property name="label_xalign">0</property>
-                    <property name="shadow_type">GTK_SHADOW_NONE</property>
                     <child>
                       <widget class="GtkAlignment" id="alignment2">
                         <property name="visible">True</property>
@@ -122,7 +122,7 @@
                             <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
                             <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
                             <child>
-                              <widget class="GtkIconView" id="view_skip">
+                              <widget class="GtkIconView" id="view_ignore">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="tooltip_text">Ignored Images</property>
@@ -140,7 +140,7 @@
                     <child>
                       <widget class="GtkLabel" id="label2">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">&lt;b&gt;Skip&lt;/b&gt;</property>
+                        <property name="label" translatable="yes">&lt;b&gt;Ignore&lt;/b&gt;</property>
                         <property name="use_markup">True</property>
                       </widget>
                       <packing>
@@ -154,8 +154,8 @@
                 </child>
               </widget>
               <packing>
-                <property name="resize">False</property>
-                <property name="shrink">True</property>
+                <property name="resize">True</property>
+                <property name="shrink">False</property>
               </packing>
             </child>
           </widget>
@@ -164,8 +164,18 @@
           </packing>
         </child>
         <child>
+          <widget class="GtkHSeparator" id="hseparator1">
+            <property name="visible">True</property>
+          </widget>
+          <packing>
+            <property name="expand">False</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+        <child>
           <widget class="GtkHBox" id="hbox2">
             <property name="visible">True</property>
+            <property name="spacing">6</property>
             <child>
               <widget class="GtkProgressBar" id="progressbar">
                 <property name="visible">True</property>
@@ -184,6 +194,7 @@
             <child>
               <widget class="GtkHButtonBox" id="hbuttonbox1">
                 <property name="visible">True</property>
+                <property name="spacing">6</property>
                 <property name="layout_style">GTK_BUTTONBOX_END</property>
                 <child>
                   <widget class="GtkButton" id="button_cancel">
@@ -199,6 +210,8 @@
                   <widget class="GtkButton" id="button_ok">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="can_default">True</property>
+                    <property name="has_default">True</property>
                     <property name="receives_default">True</property>
                     <property name="label" translatable="yes">gtk-ok</property>
                     <property name="use_stock">True</property>
@@ -218,7 +231,7 @@
           </widget>
           <packing>
             <property name="expand">False</property>
-            <property name="position">1</property>
+            <property name="position">2</property>
           </packing>
         </child>
       </widget>
