--- a/pif/ui/preview.glade
+++ b/pif/ui/preview.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Mon Mar 30 01:20:42 2009 -->
+<!--Generated with glade3 3.4.5 on Mon Mar 30 01:52:27 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="window">
     <property name="width_request">620</property>
@@ -209,9 +209,8 @@
                 <child>
                   <widget class="GtkButton" id="button_ok">
                     <property name="visible">True</property>
+                    <property name="sensitive">False</property>
                     <property name="can_focus">True</property>
-                    <property name="can_default">True</property>
-                    <property name="has_default">True</property>
                     <property name="receives_default">True</property>
                     <property name="label" translatable="yes">gtk-ok</property>
                     <property name="use_stock">True</property>
