Major refactor of the pif UI: use worker threads for IO activity, with clean callbacks for UI updates.

--- a/pif/ui/preview.glade
+++ b/pif/ui/preview.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Mon Mar 30 02:03:37 2009 -->
+<!--Generated with glade3 3.4.5 on Tue Mar 31 14:39:43 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="window">
     <property name="width_request">620</property>
@@ -83,6 +83,7 @@
                             <child>
                               <widget class="GtkIconView" id="view_upload">
                                 <property name="visible">True</property>
+                                <property name="sensitive">False</property>
                                 <property name="can_focus">True</property>
                                 <property name="tooltip_text">Ignored Images</property>
                                 <property name="selection_mode">GTK_SELECTION_MULTIPLE</property>
@@ -125,6 +126,7 @@
                             <child>
                               <widget class="GtkIconView" id="view_ignore">
                                 <property name="visible">True</property>
+                                <property name="sensitive">False</property>
                                 <property name="can_focus">True</property>
                                 <property name="tooltip_text">Ignored Images</property>
                                 <property name="selection_mode">GTK_SELECTION_MULTIPLE</property>
@@ -206,6 +208,7 @@
                     <property name="use_stock">True</property>
                     <property name="response_id">0</property>
                     <signal name="clicked" handler="on_close"/>
+                    <accelerator key="Escape" modifiers="" signal="clicked"/>
                   </widget>
                 </child>
                 <child>
@@ -217,6 +220,7 @@
                     <property name="label" translatable="yes">gtk-ok</property>
                     <property name="use_stock">True</property>
                     <property name="response_id">0</property>
+                    <signal name="clicked" handler="on_ok"/>
                   </widget>
                   <packing>
                     <property name="position">1</property>
