--- a/pif/ui/preview.glade
+++ b/pif/ui/preview.glade
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Wed Apr  1 15:33:36 2009 -->
+<!--Generated with glade3 3.4.5 on Thu Apr  2 03:32:37 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="window">
     <property name="width_request">620</property>
     <property name="height_request">525</property>
     <property name="border_width">12</property>
+    <property name="title" translatable="yes">pif</property>
     <signal name="destroy" handler="on_close"/>
     <child>
       <widget class="GtkVBox" id="vbox">
