--- a/pif/ui/preview.glade
+++ b/pif/ui/preview.glade
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Thu Apr  2 03:32:37 2009 -->
+<!--Generated with glade3 3.4.5 on Thu Apr  2 16:12:45 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="window">
     <property name="width_request">620</property>
     <property name="height_request">525</property>
     <property name="border_width">12</property>
     <property name="title" translatable="yes">pif</property>
-    <signal name="destroy" handler="on_close"/>
+    <signal name="delete_event" handler="on_close"/>
     <child>
       <widget class="GtkVBox" id="vbox">
         <property name="visible">True</property>
